--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-		<title>ShodaiMama</title>
+		<title>ShodaiMama | Online Grocery Shop</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
